[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/PixelAE-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UI/Menu/Menu/Options.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/Menu/Menu/Buttons/StartButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/Menu/fade_in/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/Menu/Menu/UISound.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 960, 540 )

[node name="UISound" parent="." instance=ExtResource( 6 )]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 410.0
margin_bottom = 1080.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 342.0
margin_right = 410.0
margin_bottom = 492.0
rect_pivot_offset = Vector2( -1640, -505 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
valign = 1

[node name="Sound_Button" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 496.0
margin_right = 410.0
margin_bottom = 615.0
custom_fonts/font = SubResource( 2 )
text = "Sound"
script = null

[node name="Back_Button" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 619.0
margin_right = 410.0
margin_bottom = 738.0
custom_fonts/font = SubResource( 2 )
text = "Back"
script = null

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="button_down" from="HBoxContainer/VBoxContainer2/Sound_Button" to="." method="_on_Sound_Button_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer2/Back_Button" to="." method="_on_Back_Button_button_down"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
